# robinson

./: LICENSE  README.md  pyproject.toml
src/robinson/: __init__.py  eyes.py  wakeword.py
src/robinson/porcupine_keyword/: robinson_en.ppn
