[project]
name = "robinson"
version = "0.1.0"
description = "A friendly robot"
dependencies = [
    "adafruit-circuitpython-pca9685==3.4.10",
    "adafruit-circuitpython-servokit==1.3.15",
    "RPi.GPIO",
    "opencv-python==4.8.0.76",
    "black>=24.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
