[project]
name = "robinson"
version = "0.1.0"
description = "A friendly robot"
dependencies = [
    "adafruit-circuitpython-pca9685==3.4.10",
    "adafruit-circuitpython-servokit==1.3.15",
    "RPi.GPIO",
    "opencv-python==4.8.0.76",
    "black>=24.3.0",
    "speechrecognition>=3.10.3",
    "pyaudio>=0.2.14",
    "spidev>=3.6",
    "gpiozero>=2.0.1",
    "pvporcupine>=3.0.2",
    "pvrecorder>=1.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
